2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Moved from ../utils/chktex to here, using kpathsea.
	* configure.ac, Makefile.am: Using kpathsea.
	* getopt.[ch], getopt1.c (removed): Now from kpathsea.

2012-04-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: New file defining the chktex version.
	* configure.ac: Adapt.

2012-04-10  Karl Berry  <karl@tug.org>

	Import chktex-1.6.6.
	* Makefile.am (dist_pdfdoc_DATA): ChkTeX.pdf is now distributed
	from upstream.
	(ChkTeX.pdf, CLEANFILES, stamp-tex, all-local,
	DISTCLEANFILES, build-tex, EXTRA_DIST): so we don't need to build
	it.  I guess.

2012-03-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getopt.h: With __need_getopt declare only getopt() but not
	getopt_long() (with 'struct option').

	* getopt.[ch]: Drop pre-ANSI C non-prototype declarations.

2012-02-27  Ken Brown  <kbrow1i@gmail.com>

	* getopt.h: Cygwin requires getopt() prototype.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getopt.h: Sync with ../../texk/kpathsea/getopt.h.

2011-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getopt.c: #include <string.h> for prototypes.

2011-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the ../../texk/am/script_links.am fragment.

2011-03-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_CHECK_PDFLATEX Autoconf macro.

2011-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Install linked perl script.

2010-12-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac [WIN32]: Skip chkweb shell script.

2010-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Added -DNO_KPSE_DLL.
	* getopt.h: Now identically copied from ../../texk/kpathsea.

2010-06-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getopt.c, getopt1.c (new): Copied from ../../texk/kpathsea.