@@ -3,12 +3,15 @@ Changes applied to the chktex-1.6.6 tree as obtained from:
 	otherwise the same as
 	http://download.savannah.gnu.org/releases/chktex/chktex-1.6.6.tar.gz
 
-Removed:
+Remove:
 	autom4te.cache/
 	configure
 	install-sh
 	stamp-h.in
 
-Added execute permissions:
-	chkweb
+Rename:
+	chkweb -> chkweb.sh
+
+Add execute permissions:
+	chkweb.sh
 
