@@ -1,3 +1,7 @@
+2012-08-31  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am: Install chkweb as linked script.
+
 2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Moved from ../utils/chktex to here, using kpathsea.
